--- a/Blazor/CustomAuthInBlazor/Pages/Login.razor
+++ b/Blazor/CustomAuthInBlazor/Pages/Login.razor
@@ -3,8 +3,8 @@
 @inject ILocalStorageService StorageService
 @inject  NavigationManager Manager
 <label>Tokenni kiriting</label>
-<input/>
-<button type="submit"@onclick="SetToken"></button>
+<input @bind="token"/>
+<button class="btn btn-primary" type="submit" @onclick="SetToken">Login</button>
 
 
 @code
@@ -14,6 +14,6 @@
     private async Task SetToken()
     {
         await StorageService.SetItemAsync("token", token);
-        Manager.NavigateTo("/Weather");
+        Manager.NavigateTo("/weather");
     }
 }
