--- a/Blazor/CustomAuthInBlazor/Pages/Weather.razor
+++ b/Blazor/CustomAuthInBlazor/Pages/Weather.razor
@@ -7,45 +7,53 @@
 @attribute [Authorize]
 @inject  AuthenticationStateProvider  StateProvider
 
-<PageTitle>Weather</PageTitle>
+<AuthorizeView Roles="admin">
+    <Authorized>
+        <PageTitle>Weather</PageTitle>
 
-<h1>Weather</h1>
-<h2 class="btn btn-danger">Welcom @username</h2>
-<h3>@roel</h3>
-<h3>@userId</h3>
+        <h1>Weather</h1>
+        <h2 class="btn btn-danger">Welcom @username</h2>
+        <h3>@roel</h3>
+        <h3>@userId</h3>
 
-<p>This component demonstrates fetching data from the server.</p>
+        <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var forecast in forecasts)
+        @if (forecasts == null)
         {
+        <p>
+            <em>Loading...</em>
+        </p>
+        }
+        else
+        {
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Date</th>
+                <th>Temp. (C)</th>
+                <th>Temp. (F)</th>
+                <th>Summary</th>
+            </tr>
+            </thead>
+            <tbody>
+            @foreach (var forecast in forecasts)
+            {
             <tr>
                 <td>@forecast.Date.ToShortDateString()</td>
                 <td>@forecast.TemperatureC</td>
                 <td>@forecast.TemperatureF</td>
                 <td>@forecast.Summary</td>
             </tr>
+            }
+            </tbody>
+        </table>
         }
-        </tbody>
-    </table>
-}
+
+    </Authorized>
+    <NotAuthorized>
+        <h3 style="color: orangered">Access denied</h3>
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
     private WeatherForecast[]? forecasts;
