--- a/Chat Project/Chat.Client/_Imports.razor
+++ b/Chat Project/Chat.Client/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Chat.Client
+@using Microsoft.AspNetCore.Authorization
 
