--- a/Chat Project/Chat.Client/Layout/MainLayout.razor
+++ b/Chat Project/Chat.Client/Layout/MainLayout.razor
@@ -1,12 +1,22 @@
-﻿@inherits LayoutComponentBase
+﻿@using Chat.Client.Services
+@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
+@inject AuthenticationStateProvider StateProvider
+@inject NavigationManager Navigation
+
 <div class="page">
     <div class="sidebar">
-        <NavMenu/>
+        <NavMenu />
     </div>
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            @if (isAuthorized)
+            {
+                <button type="submit" class="btn btn-outline-danger" @onclick="LogOut">Log out</button>
+            }
+
+
         </div>
 
         <article class="content px-4">
@@ -14,3 +24,30 @@
         </article>
     </main>
 </div>
+
+
+
+@code{
+    bool isAuthorized { get; set; } = false;
+
+    private async Task LogOut()
+    {
+        await StorageService.DeleteToken();
+
+        
+        Navigation.Refresh(true);
+    }
+
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        var stateProvider = (CustomAuthHandler)StateProvider;
+
+        var state = await stateProvider.GetAuthenticationStateAsync();
+
+        var user = state.User;
+    }
+
+}
+v>
