Code rub all code

--- a/Chat Project/Chat.Client/Pages/AccountPages/LoginBase.razor
+++ b/Chat Project/Chat.Client/Pages/AccountPages/LoginBase.razor
@@ -3,7 +3,7 @@
 @inherits LoginBase
 
 
-<h3>Login</h3>
+<h3>LoginBase</h3>
 
 <div>
     <label>Username</label>
@@ -15,7 +15,7 @@
     <InputText @bind-Value="@Model.Password"></InputText>
 </div>
 
-<button type="submit" class="btn btn-primary" @onclick="LoginClicked">Login</button>
+<button type="submit" class="btn btn-primary" @onclick="Login">Login</button>
 
 
 
