--- a/Chat Project/Chat.Client/Pages/AccountPages/Profile.razor
+++ b/Chat Project/Chat.Client/Pages/AccountPages/Profile.razor
@@ -1,4 +1,5 @@
 @page "account/profile"
+@using Microsoft.AspNetCore.Authorization
 @inherits  ProfileBaseRazor
 @attribute [Authorize]
 
@@ -56,7 +57,7 @@
     </div>
 </div>
 
-<style>
+<style/>
     * {
         margin: 0;
         padding: 0
