Code rub all code

--- a/Chat Project/Chat.Client/Properties/Pages/AccountPages/Profile.razor
+++ b/Chat Project/Chat.Client/Properties/Pages/AccountPages/Profile.razor
@@ -1,6 +1,6 @@
 @page "account/profile"
 @using Microsoft.AspNetCore.Authorization
-@inherits  ProfileBaseRazor
+@inherits  Chat.Client.Pages.AccountPages.ProfileBaseRazor
 @attribute [Authorize]
 
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
