--- a/Chat Project/Chat.Client/Properties/Pages/ChatPages/UserChats.razor
+++ b/Chat Project/Chat.Client/Properties/Pages/ChatPages/UserChats.razor
@@ -1,7 +1,7 @@
 @page "/user-chats"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
-@inherits  UserChatsBase
+@inherits  Chat.Client.Pages.ChatPages.UserChatsBase
 
 
 @if (chats.Count > 0)
