--- a/Chat Project/Chat.Client/Properties/Pages/ChatPages/SeeChat.razor
+++ b/Chat Project/Chat.Client/Properties/Pages/ChatPages/SeeChat.razor
@@ -2,7 +2,7 @@
 
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
-@inherits  SeeChatBase
+@inherits  Chat.Client.Pages.ChatPages.SeeChatBase
 
 
 <h1>ToUserId :  @ToUserId</h1>
