--- a/Chat Project/Chat.Client/Properties/Pages/AccountPages/Profile.razor
+++ b/Chat Project/Chat.Client/Properties/Pages/AccountPages/Profile.razor
@@ -1,4 +1,4 @@
-@page "account/profile"
+@page "/account/profile"
 @using Microsoft.AspNetCore.Authorization
 @inherits  Chat.Client.Pages.AccountPages.ProfileBaseRazor
 @attribute [Authorize]
@@ -6,9 +6,10 @@
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
 
     <div class="card p-4">
-        <div class=" image d-flex flex-column justify-content-center align-items-center"> <button class="btn btn-secondary">
-                <img src="@ImgUrl" height="100" width="100"/>
-            </button>
+        <div class=" image d-flex flex-column justify-content-center align-items-center">
+            
+            <button class="btn btn-secondary">
+                <img src="@ImgUrl" height="100" width="100"/></button>
             <span class="name mt-3">@User?.FirstName @User?.LastName</span>
             <span class="idd">UserName : @User?.Username</span>
             <div class="d-flex flex-row justify-content-center align-items-center gap-2">
@@ -16,38 +17,38 @@
                 <span><i class="fa fa-copy"></i></span>
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-                    <span class="number">1069 
-                         <span class="follow">Followers</span></span>
+                <span class="number">1069
+                    <span class="follow">Followers</span></span>
             </div>
             <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Edit Profile</button>
             </div>
             <div class="text mt-3">
-                    <span>
-                         @if (string.IsNullOrEmpty(User?.Bio))
-                        {
+                <span>
+                    @if (string.IsNullOrEmpty(User?.Bio))
+                    {
                         <InputTextArea DisplayName="Enter Bio" @bind-Value="@Bio"></InputTextArea>
-                              <button type="submit" @onclick="UpdateBio">Add Bio</button>
-                        }
-                        else
-                        {
+                        <button type="submit" @onclick="UpdateBio">Add Bio</button>
+                    }
+                    else
+                    {
                         <span>@User.Bio</span>
-                              <InputTextArea DisplayName="Enter Bio" @bind-Value="@Bio"></InputTextArea>
-                              <button type="submit" @onclick="UpdateBio">Update Bio</button>
-                        }
-                    </span>
+                        <InputTextArea DisplayName="Enter Bio" @bind-Value="@Bio"></InputTextArea>
+                        <button type="submit" @onclick="UpdateBio">Update Bio</button>
+                    }
+                </span>
             </div>
             <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center">
                 @if (User?.Age == null)
                 {
-                <label>Enter your age</label>
-                <input type="number" @bind="Age"/>
-                <button  type="submit" @onclick="UpdateAge">Add age</button>
+                    <label>Enter your age</label>
+                    <input type="number" @bind="Age"/>
+                    <button type="submit" @onclick="UpdateAge">Add age</button>
                 }
                 else
                 {
-                <p>Age: @User?.Age</p>
-                <input type="number" @bind="Age"/>
-                <button type="submit" @onclick="UpdateAge">update age</button>
+                    <p>Age: @User?.Age</p>
+                    <input type="number" @bind="Age"/>
+                    <button type="submit" @onclick="UpdateAge">update age</button>
                 }
 
             </div>
@@ -57,7 +58,7 @@
     </div>
 </div>
 
-<style/>
+<style>
     * {
         margin: 0;
         padding: 0
@@ -146,3 +147,4 @@
     .date {
         background-color: #ccc
     }
+</style>
